# fox-page

./: .gitignore  CMakeLists.txt  README.md  spec.md
example/: CMakeLists.txt  README.md  feature.h  home.htpl  main.cpp
src/: cli.cpp  cli.hpp  code_generator.cpp  code_generator.hpp  lexbor_wrapper.cpp  lexbor_wrapper.hpp  main.cpp  template_processor.cpp  template_processor.hpp
tests/: CMakeLists.txt
tests/single_page/: CMakeLists.txt  README.md  main.cpp  run.sh
tests/templates/: complete.htpl  comprehensive.htpl  debug.htpl  legacy.htpl  script_tags.htpl  simple.htpl  simple_vectorized.htpl
tests/unit/: test_legacy_syntax.cpp
